rg icon an about text

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -10,6 +10,7 @@ derek:
   github: 
   twitter: DerekDStretch
   email: stretchd@ukzn.ac.za
+  researchgate: Derek_Stretch
 
 sam:
   username: sam
@@ -37,6 +38,7 @@ justin:
   github: justinpringle
   twitter: justinpringle_
   email: pringlej@ukzn.ac.za
+  researchgate: Justin_Pringle2
 
   
 
@@ -52,6 +54,7 @@ katrin:
   assets: assets/images/katrin.png
   role: staff
   email: tirok@ukzn.ac.za
+  researchgate: Katrin_Tirok
 
 tadi and dagi:
   username: tadi and dagi
